fix: top navbar on mobile responsive; fix: education graph resize

--- a/src/style.scss
+++ b/src/style.scss
@@ -39,7 +39,5 @@ $main-content-layout: (
 }
 
 body {
-  min-height: 100vh;
-  min-width: 100vh;
   background-color: $base-bg-color;
 }
